nfs_srv/files/iptables.rules
# Generated by iptables-save v1.4.21 on Sat Dec 8 18:07:14 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TRAF - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i eth1 -j TRAF
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A TRAF -p icmp -m icmp --icmp-type any -j ACCEPT
-A TRAF -p tcp -m tcp --dport 22 -j ACCEPT
-A TRAF -p udp -m udp --dport 2049 -j ACCEPT
-A TRAF -p tcp -m tcp --dport 2049 -j ACCEPT
-A TRAF -p udp -m udp --dport 111 -j ACCEPT
-A TRAF -p tcp -m tcp --dport 111 -j ACCEPT
-A TRAF -p udp -m udp --dport 20048 -j ACCEPT
-A TRAF -p udp -m udp --dport 32803 -j ACCEPT
-A TRAF -p tcp -m tcp --dport 32803 -j ACCEPT
-A TRAF -j DROP
COMMIT
# Completed on Sat Dec 8 18:07:14 2018
